--- a/kubernetes/nginx.yaml
+++ b/kubernetes/nginx.yaml
@@ -12,7 +12,7 @@ data:
           proxy_pass http://flask-app:5500;
         }
       }
-    }  
+    }
 ---
 apiVersion: v1
 kind: Pod
@@ -23,26 +23,26 @@ metadata:
 spec:
   volumes:
   - name: nginx-volume
-    configMap: 
-      name: nginx-config 
+    configMap:
+      name: nginx-config
   containers:
-    name: nginx
+  - name: nginx
     image: nginx:latest
-    ports:
+    ports: 
     - containerPort: 80
     volumeMounts:
     - name: nginx-volume
-      mountPath: /etc/nginx
+      mountPath: /etc/nginx/
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: LoadBalancer
+  type: LoadBalancer 
   selector:
     app: nginx
   ports:
   - protocol: TCP
-    port: 80 
+    port: 80
     targetPort: 80
