--- a/kubernetes/nginx.yaml
+++ b/kubernetes/nginx.yaml
@@ -26,7 +26,7 @@ spec:
     configMap: 
       name: nginx-config 
   containers:
-    name: nginx
+  - name: nginx
     image: nginx:latest
     ports:
     - containerPort: 80
