--- a/kubernetes/nginx.yaml
+++ b/kubernetes/nginx.yaml
@@ -12,27 +12,40 @@ data:
           proxy_pass http://flask-app:5500;
         }
       }
-    }
+    } 
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nginx
   labels:
     app: nginx
 spec:
-  volumes:
-  - name: nginx-volume
-    configMap:
-      name: nginx-config
-  containers:
-  - name: nginx
-    image: nginx:latest
-    ports: 
-    - containerPort: 80
-    volumeMounts:
-    - name: nginx-volume
-      mountPath: /etc/nginx/
+  replicas: 10
+  selector:
+    matchLabels:
+      app: nginx  
+  strategy:
+    rollingUpdate:
+      maxSurge: 10%
+      maxUnavailable: 25%
+  template:
+    metadata:
+      labels:
+        app: nginx      
+    spec:
+      volumes:
+      - name: nginx-volume
+        configMap:
+         name: nginx-config
+      containers:
+      - name: nginx
+        image: nginx:latest
+        ports: 
+        - containerPort: 80
+        volumeMounts:
+        - name: nginx-volume
+          mountPath: /etc/nginx/
 ---
 apiVersion: v1
 kind: Service
