--- a/kubernetes/task1-flask.yaml
+++ b/kubernetes/task1-flask.yaml
@@ -1,25 +1,41 @@
 apiVersion: v1
-kind: Pod
-metadata:
-  name: task1
-  labels:
-    app: task1
-spec:
-  containers:
-  - name: task1
-    image: michaelyarborough/task1kube
-    ports: 
-    - containerPort: 5500
----
-apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app
+  name: backend
 spec:
   type: ClusterIP 
   selector:
-    app: task1
+    app: backend
   ports:
   - protocol: TCP
     port: 5500 
     targetPort: 5500 
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: backend
+  labels:
+    app: backend
+spec:
+  replicas: 10
+  selector:
+    matchLabels:
+      app: backend  
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+  template:
+    metadata:
+      labels:
+        app: backend      
+    spec:
+       containers:
+       - name: backend
+         image: michaelyarborough/task1kube
+         ports: 
+         - containerPort: 5500
+
+
+
