--- a/kubernetes/task1-flask.yaml
+++ b/kubernetes/task1-flask.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP 
   selector:
-    app: backend
+    app: flask-app
   ports:
   - protocol: TCP
     port: 5500 
@@ -14,14 +14,14 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: flask-app
   labels:
-    app: backend
+    app: flask-app
 spec:
   replicas: 10
   selector:
     matchLabels:
-      app: backend  
+      app: flask-app  
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -29,10 +29,10 @@ spec:
   template:
     metadata:
       labels:
-        app: backend      
+        app: flask-app      
     spec:
        containers:
-       - name: backend
+       - name: flask-app
          image: michaelyarborough/task1kube
          ports: 
          - containerPort: 5500
