--- a/kubernetes/task1-flask.yaml
+++ b/kubernetes/task1-flask.yaml
@@ -34,7 +34,5 @@ spec:
        containers:
        - name: flask-app
          image: michaelyarborough/task1kube
+         ports: 
          - containerPort: 5500
-
-
-
