--- a/kubernetes/task1-flask.yaml
+++ b/kubernetes/task1-flask.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
        containers:
        - name: flask-app
-         image: michaelyarborough/task1kubeblue
+         image: michaelyarborough/task1
          ports: 
          - containerPort: 5500
